1.19.1 sources